--- a/client/index.html
+++ b/client/index.html
@@ -199,13 +199,28 @@
                     <hr>
 
                     <div class="row">
-                        <div class="col-sm-3 col-sm-offset-1">
-                            <label class="control-label" for="paramSearchDataset" title="Show coincidences in the selected dataset">Coincidences in</label>
+                        <div class="col-sm-3 col-sm-offset-0">
+                            <label class="control-label" for="paramSearchDataset" title="Show matches in the selected dataset">Coincidences in</label>
                         </div>
-                        <div class="col-sm-2">
+                        <div class="col-sm-3">
                             <select id="paramSearchDataset">
                             </select>
                         </div>
+                        <div class="col-sm-1">
+                            <select id="paramSearchJoin">
+                            <option value="and" selected>and</option>
+                            <option value="or">or</option>
+                            <option value="not">not</option>
+                            </select>
+                        </div>
+                        <div class="col-sm-1 col-sm-offset-1">
+                            <label class="control-label" title="And/or/not">in</label>
+                        </div>
+                        <div class="col-sm-3">
+                            <select id="paramSearchDataset2">
+                            </select>
+                        </div>
+
 
                     </div>
                     <hr>
@@ -222,7 +237,7 @@
                 </div>
 
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+                    <!--<button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>-->
                     <button type="button" id="btConfigSearchSave" class="btn btn-primary">Save</button>
                 </div>
 
@@ -256,7 +271,7 @@
                 </div>
 
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+                    <!--<button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>-->
                     <button type="button" id="btSelectOptions" class="btn btn-primary" disabled="true">Select</button>
                 </div>
 
@@ -489,7 +504,7 @@
             ////////////////////////////////////////////////
                 //$('#patternSearch').val("aaaaabcba");
                 //$('#patternSearch').val("a*5+abcba*2");
-                $('#patternSearch').val("a*5"); // esta es la buena con enrichment
+                $('#patternSearch').val("abcba*3"); // esta es la buena con enrichment
                 $('#username').val("jpiriz");
                 $('#password').val("alguna");
                 $('#btLogin').click();
