--- a/client/index.html
+++ b/client/index.html
@@ -86,6 +86,7 @@
             <!-- FILE UPLOAD -->
             <div style="margin-top:5px;">
 
+
                 <div style="float:left;margin-left: 30px;margin-right:5px;">
                    <input type="button" id="selectFile" value="Select data" title="Select preloaded data"><br>
                 </div>
@@ -95,17 +96,14 @@
                     <img id="imgLoadingFile" src="images/loading.gif" style="visibility:hidden"/>
                 </div>
 
-                <div>
+                <div style="float:left;margin-left:5px;margin-right:5px;">
                     <label id="loadText">No file loaded.</label>
                 </div>
-
             </div>
-
 
             <!-- SEARCH -->
             <div style="margin-top:0px">
-
-
+                <!--
                 <div style="float:left;margin-top:4px;margin-left:30px;margin-right:5px;">
                     <input type="text" id="patternSearch" title="pattern to search, according to the window and number of bins. You can also search for intervals with 'start-end' and by gene names">
                 </div>
@@ -118,14 +116,14 @@
                         <option value="3">3</option>
                     </select>
                 </div>
-
-                <div style="float:left;margin-left:5px;margin-right:5px;margin-top:4px">
-                    <input type="button" id="showSearchOptions" value="Options" title="Search options" class="options"><br>
+-->
+                <div style="float:left;margin-left:30px;margin-right:5px;margin-top:4px">
+                    <input type="button" id="showSearchOptions" value="Search pattern" title="Search pattern options"><br>
                 </div>
 
-                <div style="float:left;margin-top:4px;margin-left:5px;margin-right:5px;">
-                    <button type="button" onclick="searchPattern()">Search</button>
-                </div>
+                <!--<div style="float:left;margin-top:4px;margin-left:5px;margin-right:5px;">
+                    <button type="button" onclick="searchPattern()">Search pattern</button>
+                </div>-->
 
                 <!-- ICON OF "LOADING..." -->
                 <div style="float:left;margin-top:4px;margin-left:5px;">
@@ -138,20 +136,10 @@
         <!-- CHROMOSOME ICONS -->
         <div style="float:left;margin-left:36px;" id="imagesChromosomes"></div>
 
-        <!-- LOGOUT -->
-        <!--<div style="float:right;margin-left:10px;margin-right:100px;margin-top:5px;">
-            <button type="button" id="btLogout">Logout</button>
-        </div>-->
+        <!-- LOAD WIG/BW FILE -->
         <div style="float:right;margin-left: 10px;margin-right:100px;margin-top:5px;height:20px;width:50px">
             <input type="button" id="loadOptions" value="Load file" title="Load wig or bigwig file" class="options"><br>
         </div>
-
-
-        <!-- VISUALIZATION -->
-        <!--<div id="lineSeq"></div>
-        <div id="lineSeq2"></div>
-        <div id="lineSeq3"></div>-->
-
     </div>
 
 
@@ -163,18 +151,75 @@
 
                 <div class="modal-header">
                     <button type="button" class="close" data-dismiss="modal">&times;</button>
-                    <h3 class="modal-title">Search options</h3>
+                    <h3 class="modal-title">Search pattern</h3>
                 </div>
 
                 <div class="modal-body">
                     <div class="row">
-                        <div class="col-sm-3 col-sm-offset-1">
-                        <label title="Draw the binning areas for the underlying discretization"><input type="checkbox" id="paramGrid">Draw Grid<br></label>
+                    <div class="col-sm-3 col-sm-offset-1">
+                        <label class="control-label" for="paramSearchDataset" title="Search for the given pattern in bins (a,b,c...,*,+)/gene names/interval as a:b matches in the selected dataset">Search pattern</label>
+                    </div>
+                    <div class="col-sm-1 col-sm-offset-0">
+                        <input type="text" id="patternSearch" value="abcba*3" title="pattern to search, according to the window and number of bins. You can also search for intervals with 'start-end' and by gene names">
+                    </div>
+                    <div class="col-sm-1 col-sm-offset-3">
+                        <label class="control-label" for="paramSearchDataset" title="Show matches in the selected dataset">in</label>
                     </div>
                     <div class="col-sm-3">
-                        <label title="Soft mutations consider only 1-letter distance mutations, in the case that parameter d>0"><input type="checkbox" id="paramMutations" checked>Soft mutations<br></label>
+                        <select id="paramSearchDataset">
+                        </select>
                     </div>
+                </div>
+
+                <div class="row">
+
+                    <div class="col-sm-1 col-sm-offset-1">
+                        <select id="paramSearchJoin">
+                            <option value="None" selected></option>
+                            <option value="and">and</option>
+                            <option value="or">or</option>
+                            <option value="not">not</option>
+                        </select>
                     </div>
+
+                    <div class="col-sm-2">
+                        <label class="control-label" for="paramSearchDataset" title="Search for the given pattern in bins (a,b,c...,*,+), gene names, or intervals (x:y)">pattern</label>
+                    </div>
+                    <div class="col-sm-1 col-sm-offset-0">
+                        <input type="text" id="patternSearch2" title="pattern to search, according to the window and number of bins. You can also search for intervals with 'start-end' and by gene names"  disabled="true">
+                    </div>
+
+                    <div class="col-sm-1 col-sm-offset-3">
+                        <label class="control-label" title="And/or/not">in</label>
+                    </div>
+                    <div class="col-sm-3">
+                        <select id="paramSearchDataset2"  disabled="true">
+                            <option value="None" selected></option>
+                        </select>
+
+                    </div>
+
+                </div>
+                <hr>
+                    <div class="row">
+                        <div class="col-sm-1 col-sm-offset-1">
+                        <select id="dSearch" title="# of permitted 'point mutations' from the original pattern">
+                            <option value="0" selected="selected">0</option>
+                            <option value="1">1</option>
+                            <option value="2">2</option>
+                            <option value="3">3</option>
+                        </select>
+                        </div>
+                        <div class="col-sm-4 col-sm-offset-0">
+                            <label class="control-label" for="dSearch" title="# of deviations from the pattern">mutations allowed</label>
+                        </div>
+                        <div class="col-sm-3">
+                            <label title="Soft mutations consider only 1-letter distance mutations, in the case that parameter d>0"><input type="checkbox" id="paramMutations" checked>Soft mutations<br></label>
+                        </div>
+
+                    </div>
+
+
 
                     <div class="row">
                         <div class="col-sm-3 col-sm-offset-1">
@@ -194,37 +239,14 @@
                             <label title="If checked, only patterns fully inside the selected regions are reported"><input type="checkbox" id="paramIntersect" >Fully inside<br></label>
                         </div>
 
-
                     </div>
                     <hr>
 
                     <div class="row">
-                        <div class="col-sm-3 col-sm-offset-0">
-                            <label class="control-label" for="paramSearchDataset" title="Show matches in the selected dataset">Coincidences in</label>
+                        <div class="col-sm-3 col-sm-offset-1">
+                            <label title="Draw the binning areas for the underlying discretization"><input type="checkbox" id="paramGrid">Draw Grid<br></label>
                         </div>
-                        <div class="col-sm-3">
-                            <select id="paramSearchDataset">
-                            </select>
-                        </div>
-                        <div class="col-sm-1">
-                            <select id="paramSearchJoin">
-                            <option value="and" selected>and</option>
-                            <option value="or">or</option>
-                            <option value="not">not</option>
-                            </select>
-                        </div>
-                        <div class="col-sm-1 col-sm-offset-1">
-                            <label class="control-label" title="And/or/not">in</label>
-                        </div>
-                        <div class="col-sm-3">
-                            <select id="paramSearchDataset2">
-                            </select>
-                        </div>
-
-
                     </div>
-                    <hr>
-
                     <div class="row">
                         <div class="col-sm-2 col-sm-offset-1">
                             <label class="control-label" for="paramKmotif" title="Select the size (k) of the sequences that will be reported as most similar">Motif size</label>
@@ -238,7 +260,8 @@
 
                 <div class="modal-footer">
                     <!--<button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>-->
-                    <button type="button" id="btConfigSearchSave" class="btn btn-primary">Save</button>
+                    <!--<button type="button" id="btConfigSearchSave" class="btn btn-primary">Save</button>-->
+                    <button type="button" id="btConfigSearch" onclick="$('#searchOptions').modal('hide'); searchPattern()" class="btn btn-primary">Search</button>
                 </div>
 
             </div>
